[project]
name = "mongodb-lib"
version = "0.1.0"
description = ""
authors = [{ name = "Oluwaleye Victor", email = "oluwasquarelsv@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["motor (>=3.7.0,<4.0.0)", "pydantic (>=2.11.3,<3.0.0)"]

[tool.poetry]
packages = [{ include = "mongodb_lib" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
